S3 integration tested & complete
